[package]
name = "re-ll"
version = "0.1.0"
authors = ["cynic64 <f3bl@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { path = "../vulkano-master/vulkano" }
vulkano-win = { path = "../vulkano-master/vulkano-win" }
vulkano-shaders = { path = "../vulkano-master/vulkano-shaders" }
winit = "0.19"
